[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hk-pre-owned-rolex-monitoring"
dynamic = ["version"]
description = "Deterministic monitoring for Oriental Watch Hong Kong Rolex CPO listings"
readme = {text = "Platform-neutral Agent Skill and CLI for auditable Hong Kong pre-owned Rolex inventory monitoring. See the repository README and SKILL.md for installation, source-access policy, and operating guidance.", content-type = "text/markdown"}
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "platformdirs>=4,<5",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
]

[project.scripts]
inventoryctl = "inventory_sentinel.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "inventory_sentinel.version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
markers = ["live: low-frequency read-only tests against the real site"]
